force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Object_Filter_Crtieria__c.field-meta.xml
<CustomField>
    <fullName>Object_Filter_Crtieria__c</fullName>
    <description>Filter criteria for the Related Object&apos;s records.</description>
    <inlineHelpText>Enter the WHERE clause string to filter the Related Object&apos;s records.</inlineHelpText>
    <label>Object Filter Crtieria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>