force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>ucinn_ascendv2__Involvement__c</fullName>
            </value>
            <value>
                <fullName>ucinn_ascendv2__Society_Membership__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>